# tryolivia

./: .gitignore  Anchor.toml  BRING_THE_NOISE.md  DEPLOYMENT_SUMMARY.md  Justfile  LICENSE  PRIVACY_POLICY.md  Package.resolved  Package.swift  README.md  Reference.md  WHITEPAPER.md  package.json
Arcium/: README.md
Arcium/docs/: Arcium.md  MagicBlock.md
Arcium/scripts/: init-arcium-localnet.js  init-mxe-devnet.js
Configs/: Release.xcconfig
Frontend/: .gitignore  package-lock.json  package.json
Programs/PredictionMarket/: Cargo.toml
Scripts/: deploy-complete.sh  setup-program-id.sh
Solana/: Anchor.toml  Cargo.toml  demo-data.json  deploy-mainnet.sh  package.json  quick-dao-check.js  tsconfig.json
Solana/app/: arcium-client.ts  olivia-dao-client.ts  test-integration.ts
Solana/encrypted-ixs/: Cargo.toml
Solana/encrypted-ixs/src/: delivery.rs  lib.rs  pir.rs  routing.rs
Solana/idl/: olivia_arcium_idl.json
Solana/programs/olivia/: Cargo.toml
Solana/programs/olivia-dao/: Cargo.toml
Solana/programs/olivia-dao-arcium/: Cargo.toml
Solana/programs/olivia-dao-arcium-real/: Arcium.toml  Cargo.toml
Solana/programs/olivia-dao-arcium-real/encrypted-ixs/: Cargo.toml
Solana/programs/olivia-dao-arcium-real/encrypted-ixs/src/: lib.rs
Solana/programs/olivia-dao-arcium-real/src/: lib.rs
Solana/programs/olivia-dao-arcium/src/: lib.rs
Solana/programs/olivia-dao/src/: lib.rs
Solana/programs/olivia-dao/src/instructions/: ephemeral_rollup.rs
Solana/programs/olivia/src/: lib.rs
Solana/programs/olivia/src/instructions/: arcium_confidential.rs  ephemeral_rollup.rs  mod.rs
Solana/relay-server/: Dockerfile  deploy.sh  docker-compose.yml  nginx.conf  package.json
Solana/relay-server/src/: server.js
Solana/scripts/: initialize-dao.js  launch-community.ts
Solana/tests/: arcium-demo.ts  arcium-integration.ts  olivia-dao.ts
docs/: ArciumIntegration.md  TorIntegration.md  privacy-assessment.md
localPackages/OliviaLogger/: Package.swift
localPackages/Tor/: Package.swift
olivia/: Info.plist  LaunchScreen.storyboard  Localizable.xcstrings  OliviaApp.swift  olivia-macOS.entitlements  olivia.entitlements
olivia.xcodeproj/: project.pbxproj
olivia/Config/: ProductionConfig.swift
olivia/Identity/: IdentityModels.swift  SecureIdentityStateManager.swift
olivia/Models/: DAOExtensions.swift  DAOMember.swift  MessagePadding.swift  NoisePayload.swift  OliviaMessage.swift  OliviaPacket.swift  OliviaPeer.swift  PeerID.swift  ReadReceipt.swift
olivia/Nostr/: GeoRelayDirectory.swift  NostrEmbeddedOLIVIA.swift  NostrIdentity.swift  NostrProtocol.swift  (+1 more)
oliviaShareExtension/: Info.plist  ShareViewController.swift  oliviaShareExtension.entitlements
oliviaTests/: BLEServiceTests.swift  CommandProcessorTests.swift  FontOliviaTests.swift  GCSFilterTests.swift  GeohashBookmarksStoreTests.swift  GossipSyncManagerTests.swift  LocalizationCatalogTests.swift  LocationChannelsTests.swift  LocationNotesManagerTests.swift  NostrProtocolTests.swift  NotificationStreamAssemblerTests.swift  README.md  SolanaServiceTests.swift
scripts/: inspect-olivia-dao.sh
(+114 files in other folders)
