[package]
name = "olivia-dao-arcium-real"
version = "0.1.0"
description = "OLIVIA DAO with real Arcium encrypted compute integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "olivia_dao_arcium_real"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
arcium-anchor = "0.3.0"
arcium-client = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.10.0"

[dev-dependencies]
solana-program-test = "~1.16"
tokio = "1.0"
