[package]
name = "olivia-dao"
version = "0.1.0"
description = "OLIVIA DAO - Decentralized messaging network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "olivia_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
