[package]
name = "olivia"
version = "0.1.0"
description = "OLIVIA - Decentralized Communication Network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "olivia"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
# Arcium integration handled via IDL + client-side SDK
